chore: prevent overflowing content

--- a/src/pages/_Homepage.scss
+++ b/src/pages/_Homepage.scss
@@ -5,6 +5,7 @@
   z-index: 2;
   position: relative;
   background: var(--background-color);
+  overflow: hidden;
 
   &__top {
     pointer-events: none;
